syntax = "proto3";

package gemini_service;
option go_package = "bmwadforth/gemini";

service Gemini {
  rpc QueryGemini(QueryRequest) returns (stream QueryResponse);
}

message QueryRequest {
  string query = 1;
}

message QueryResponse {
  int32 option = 1;
  string response = 2;
  string error = 3;
}